--- a/package.json
+++ b/package.json
@@ -1,38 +1,32 @@
 {
-  "name": "nasa-app",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
-  },
+  "name": "nasa-api",
+  "version": "1.0.0",
+  "description": "",
+  "main": "app.js",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon app.js"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Sogugui/NasaApi.git"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "author": "Sofia Guardia",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Sogugui/Nasa-Api/issues"
+  },
+  "homepage": "https://github.com/Sogugui/NasaApi#readme",
+  "dependencies": {
+    "database": "^0.0.2",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "mongodb": "^4.8.1",
+    "mongoimport": "^1.0.6",
+    "mongoose": "^6.5.1",
+    "node-fetch": "^2.6.7",
+    "nodemon": "^2.0.19",
+    "request": "^2.88.2",
+    "tools": "^0.0.0"
   }
 }
